--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <li>{{item}}</li>
             {{/each}}
         </ul>
+
+        {{#link-to 'corporations'}}Corporations{{/link-to}}
     </script>
 
     <script type="text/x-handlebars" id="corporations">
